--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         margin: 0;
       }
     </style>
-    <title>HBSales - New home buying experience for you</title>
+    <title>Kinto Nicaragua - Alquiler de vehiculos</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
